  however be incomplete if not all domains have been joined when the main
  domain terminates.
  (Miod Vallat, review by KC Sivaramakrishnan, feedback from Nick Barnes
   and Gabriel Scherer)

- #13354: Use C99 flexible array member syntax everywhere.
  (Antonin Décimo, review by Miod Vallat, Gabriel Scherer, and Xavier Leroy)

### Code generation and optimizations:

### Standard library:

- #13543: Remove some String-Bytes conversion from the stdlib to behave better
  with js_of_ocaml
  (Hugo Heuzard, review by Gabriel Scherer)

### Other libraries:

- #13429: add `Unix.sigwait`, a binding to the `sigwait` system call;
  implement `Thread.wait_signal` using `Unix.sigwait`, and
  `Thread.sigmask` using `Unix.sigprocmask`.
  (Xavier Leroy, review by Antonin Décimo, Gabriel Scherer, Miod Vallat)

- #13442, #13452: Fix Unix.getgroups for users belonging to more than 32 groups
  when using musl
  (Kate Deplaix, review by Gabriel Scherer, Antonin Décimo, Anil Madhavapeddy)

* #13435: On Windows, use system calls for `Filename.get_temp_dir_name` instead
  of directly reading the environment, which in particular improves the security
  of OCaml processes running in the SYSTEM security context by mitigating
  privileged file operation attacks. For all other processes running with the
  default environment (where `TEMP` is set), there is no discernible change.
  (Antonin Décimo, review by Nicolás Ojeda Bär and David Allsopp)

### Tools:

- #12019: ocamlc: add `align_double` and `align_int64` to `ocamlc -config`
  output.
  (Romain Beauxis, review by David Allsopp)

### Manual and documentation:

- #13469, #13474, #13535: Document that [Hashtbl.create n] creates a hash table
  with a default minimal size, even if [n] is very small or negative.
  (Antonin Décimo, Nick Bares, report by Nikolaus Huber and Jan Midtgaard,
   review by Florian Angeletti, Anil Madhavapeddy, Gabriel Scherer,
   and Miod Vallat)

### Compiler user-interface and warnings:
