@@ -156,6 +156,15 @@ ifeq "$(FUNCTION_SECTIONS)" "true"
 OPTCOMPFLAGS += -function-sections
 endif
 
+ifeq "$(LIBDIR_REL)" ""
+  SET_RELATIVE_STDLIB =
+else
+  SET_RELATIVE_STDLIB = \
+-set-global-string 'caml_standard_library_default=$(LIBDIR_REL)'
+endif
+
+DOTOPT_LINKFLAGS = $(SET_RELATIVE_STDLIB)
+
 # The rule to compile C files
 
 # This rule is similar to GNU make's implicit rule, except that it is more
@@ -355,7 +364,7 @@ $(basename $(notdir $(1)))_NCOBJS = \
   $$($(basename $(notdir $(1)))_CMX_FILES)
 
 # To be overridden by the programs needing special native link flags
-$(basename $(notdir $(1)))_NATIVE_LINKFLAGS =
+$(basename $(notdir $(1)))_NATIVE_LINKFLAGS = $(DOTOPT_LINKFLAGS)
 
 $(basename $(notdir $(1)))_NATIVE_LINKCMD = \
 $(strip \
